tests/valid-gd-scripts/comment_at_the_end_of_file_237.gd
func foo():
	var a = 1
#	# var i = 2