tests/invalid-gd-scripts/static_variables.gd
func foo():
	static var x = 1
